# WatchTower

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260517_001_initial_schema.py  20260517_002_service_alert_fields.py
app/: __init__.py  main.py
app/alerts/: circuit_breaker.py  notifiers.py
app/api/: deps.py
app/api/routes/: health.py  incidents.py  ping.py  services.py
app/core/: config.py  database.py  logging.py  redis_client.py  security.py  startup.py  sync_database.py
app/listeners/: redis_expiry.py
app/middleware/: request_id.py  security_headers.py
app/models/: __init__.py  base.py  enums.py  incident.py  service.py
app/services/: heartbeat.py  incident_handler.py  service_manager.py
app/workers/: celery_app.py  tasks.py
examples/: cron_ping.sh
scripts/: entrypoint.sh  start-api.sh
tests/: conftest.py  test_api.py  test_circuit_breaker.py  test_incident_handler.py  test_models.py  test_production_config.py  test_security.py
